# qdrust

./: Cargo.toml  LICENSE  README.md
assets/: index.html.tera
assets/static/: bot.js  chess.js  script.js  styles.css
src/: app.rs  lib.rs  main.rs
src/app/: battle.rs  benchmark.rs  enums.rs  playbot.rs  playbotcli.rs
src/bot/: base.rs  collections.rs  elo.rs  mod.rs
src/bot/collections/: adapt.rs  basic.rs  mod.rs  random.rs  weak.rs
src/qd/: legalcomp.rs  mod.rs  state.rs  utils.rs
